# medbook-core

./: Cargo.toml
src/: app_error.rs  app_state.rs  bootstrap.rs  config.rs  consumers.rs  cors.rs  db.rs  jwt_authentication.rs  lib.rs  middleware.rs  outbox.rs  schema.rs  swagger.rs
