[package]
name = "medbook-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.4"
diesel = { version = "2.2.12", features = ["chrono", "uuid", "postgres"] }
diesel_migrations = { version = "2", features = ["postgres"] }
diesel-async = { version = "0.6.1", features = [
    "postgres",
    "tokio",
    "pool",
    "bb8",
] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "fs", "timeout", "limit", "cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
rmq-wrappers = { git = "https://github.com/Pasobeso/rmq-wrappers.git" }
lapin = "3.7.0"
futures-lite = "2.6.1"
futures = "0.3.31"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde"] }
jsonwebtoken = { version = "9", default-features = false }
utoipa = "5.4.0"
